# C-Obfuscator

./: CMakeLists.txt  readme.md
src/: action.h  main.cpp  obfus_action.h  scan_action.h
